[package]
name = "api-test"
version = "0.1.0"
authors = ["Zenios Zeniou <mrzenioszeniou@gmail.com>"]
edition = "2018"

[dependencies]
futures     = "=0.3.13"
log         = "=0.4.14"
serde       = "=1.0.125"
serde_json  = "=1.0.64"
simplelog   = "=0.10.0"
structopt   = "=0.3.21"
hyper       = { version = "=0.14.5", features = ["full"] }
tokio       = { version = "=1.4.0", features = ["full"] }